--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.9.0",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-config": "^1.5.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.1",
